[project]
name = "naarad-openenv"
version = "0.1.0"
description = "AI-powered grievance assistant"
authors = [
    { name = "Saket Pathak" }
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "requests"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"